added recipes index and styles

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<p> hello </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipe Book</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>My Recipe Book</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Recipes</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container">
+        <h2>Recipes</h2>
+        <ul>
+            <li><a href="chocolateChipCookies.html">Chocolate Chip Cookies</a></li>
+            <li><a href="avocadoToast.html">Avocado Toast</a></li>
+            <!-- Add more recipes here -->
+        </ul>
+    </div>
+
+    <footer>
+        <p>My Recipe Book &copy; 2024</p>
+        <p><a href="http://prevsite.com">Previous Site</a> | <a href="http://nextsite.com">Next Site</a></p>
+    </footer>
+</body>
+</html>
