added spag and salad

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <ul>
             <li><a href="chocolateChipCookies.html">Chocolate Chip Cookies</a></li>
             <li><a href="avocadoToast.html">Avocado Toast</a></li>
+            <li><a href="greekSalad.html">Greek Salad</a></li>
+            <li><a href="spaghettiCarbonara.html">Spaghetti Carbonara</a></li>
             <!-- Add more recipes here -->
         </ul>
     </div>
