Dana's 2 recipes have been added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li><a href="avocadoToast.html">Avocado Toast</a></li>
             <li><a href="greekSalad.html">Greek Salad</a></li>
             <li><a href="spaghettiCarbonara.html">Spaghetti Carbonara</a></li>
+            <li><a href="beefBurrito.html">Beef Burrito</a></li>
+            <li><a href="centralAsianPlov.html">Central Asian Plov</a></li>
             <!-- Add more recipes here -->
         </ul>
     </div>
